# gnome-control-center

./: .clang-format  .cvsignore  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .gitmodules  0001-build-Fix-app-icon-install.patch  ChangeLog  Gnome.directory  Gnome.directory.in  MAINTAINERS  Makefile.am  NEWS  README  README.md  TODO  TODO.xml  acconfig.h  autogen.sh  configure.ac  configure.in  control-center.m4  control-center.spec  control-center.spec.in  gnome-control-center.doap  gnome-control-center.schemas.in  meson.build  meson_options.txt  meson_post_install.py  pof.po  update-from-gsd.sh
archiver/: .cvsignore  Bonobo_Moniker_archiver.oaf.in  ChangeLog  Makefile.am  README  TODO  archive.c  archive.h  archiver-client.c  archiver-client.h  archiver-spec  backend-list.c  backend-list.h  bonobo-config-archiver.c  bonobo-config-archiver.h  bonobo-moniker-archiver.c  cluster-location.c  cluster-location.h  cluster.c  cluster.h  config-archiver.c  config-log.c  config-log.h  config-manager-dialog.c  config-manager-dialog.h  config-manager.c  config_archiverConf.sh.in  create-location-dialog.c  create-location-dialog.h  default-global.xml  default-user.xml  future-spec  location-list.c  location-list.h  location.c  location.h  main.c  rollback-location-management.glade  rollback-widget.c  rollback-widget.h  (+4 more)
capplets/: Makefile.am  sound-properties-capplet.c
control-center/: .cvsignore  ChangeLog  GNOME_ControlCenter.server.in  Gnome.directory.in.in  Makefile.am  capplet-dir-view-html.c  capplet-dir-view-list.c  capplet-dir-view-tree.c  capplet-dir-view.c  capplet-dir-view.h  capplet-dir-window.c  capplet-dir-window.h  capplet-dir.c  capplet-dir.h  control-center-categories.c  control-center-categories.h  control-center.c  gnomecc-canvas.c  gnomecc-canvas.h  gnomecc-event-box.c  gnomecc-event-box.h  gnomecc-preferences.glade  gnomecc-rounded-rect.c  gnomecc-rounded-rect.h  gnomecc-ui.xml  gnomecc.desktop  gnomecc.desktop.in  gnomecc.desktop.in.in  gnomecc.glade  gnomecc.glade.h  html-view.xpm  icon-view.xpm  kill-gnomecc.sh  main.c  preferences.c  preferences.h  root-manager.c  tree-view.xpm  ximian-shell.patch
examples/: Makefile.am  cc-example-panel.c  cc-example-panel.h  example-module.c  gnome-example-panel.desktop.in.in
font-viewer/: Makefile.am  font-thumbnailer.c  font-view.c  ftstream-vfs.c  ftstream-vfs.h  gnome-font-viewer.desktop.in.in
global-shortcuts-provider/: cc-global-shortcut-dialog.blp  cc-global-shortcut-dialog.c  cc-global-shortcut-dialog.h  cc-global-shortcut-dialog.ui  cc-global-shortcuts-provider.c  cc-global-shortcuts-provider.h  control-center-global-shortcuts-provider.c  control-center-global-shortcuts-provider.h  global-shortcuts-provider.gresource.xml  meson.build  org.gnome.GlobalShortcutsProvider.xml  org.gnome.Settings.GlobalShortcutsProvider.service.in
gnome-settings-daemon/: .cvsignore  ChangeLog  GNOME_SettingsDaemon.server.in  GNOME_SettingsDaemon.server.in.in  Makefile.am  clipboard-manager.c  clipboard-manager.h  eggaccelerators.c  factory.c  gnome-settings-accessibility-keyboard.c  gnome-settings-accessibility-keyboard.h  gnome-settings-background.c  gnome-settings-background.h  gnome-settings-clipboard.c  gnome-settings-daemon.c  gnome-settings-daemon.h  gnome-settings-dbus.c  gnome-settings-dbus.h  gnome-settings-default-editor.c  gnome-settings-default-editor.h  gnome-settings-font.c  gnome-settings-font.h  gnome-settings-gtk1theme.c  gnome-settings-gtk1theme.h  gnome-settings-keybindings.c  gnome-settings-keybindings.h  gnome-settings-keyboard-xkb.c  gnome-settings-keyboard-xkb.h  gnome-settings-keyboard.c  gnome-settings-keyboard.h  gnome-settings-locate-pointer.c  gnome-settings-locate-pointer.h  gnome-settings-module.c  gnome-settings-module.h  gnome-settings-mouse.c  gnome-settings-mouse.h  gnome-settings-multimedia-keys.c  gnome-settings-multimedia-keys.h  gnome-settings-screensaver.c  gnome-settings-screensaver.h  (+21 more)
help/: ChangeLog  Makefile.am
libbackground/: ChangeLog  Makefile.am  applier.c  applier.h  preferences.c  preferences.h  preview-file-selection.c  preview-file-selection.h
libgnome-control-center/: Makefile.am  cc-editable-entry.c  cc-editable-entry.h  cc-lockbutton.c  cc-lockbutton.h  cc-marshal.c  cc-marshal.h  cc-panel.c  cc-panel.h  cc-setting-editor.c  cc-setting-editor.h  cc-shell.c  cc-shell.h  gconf-property-editor-marshal.h  gconf-property-editor.c  gconf-property-editor.h  libgnome-control-center.pc.in  test-setting-editor.c
libgnome-control-center-extension/: Makefile.am  capplet-util.c  cc-page.c  cc-page.h  cc-panel.c  cc-panel.h  cc-shell.c  cc-shell.h  cc-theme-thumbnailer-helper.c  cc-theme-thumbnailer-slave.c  cc-theme-thumbnailer-slave.h  cc-theme-thumbnailer.c  cc-theme-thumbnailer.h  file-transfer-dialog.c  gconf-property-editor.c  gnome-theme-apply.h  gnome-theme-info.c  gnome-theme-test.c  gtkrc-utils.c  libgnome-control-center-extension-uninstalled.pc.in  libgnome-control-center-extension.pc.in  theme-thumbnail.c  wm-common.h
libslab/: .cvsignore  .gitignore  ChangeLog  Makefile.am  app-resizer.c  app-resizer.h  app-shell-startup.c  app-shell-startup.h  app-shell.c  app-shell.h  application-tile.c  application-tile.h  bookmark-agent.c  bookmark-agent.h  directory-tile.c  directory-tile.h  document-tile.c  document-tile.h  double-click-detector.c  gnome-utils.c  gnome-utils.h  libslab-utils.c  libslab-utils.h  libslab.pc.in  nameplate-tile.c  nameplate-tile.h  recent-files.c  recent-files.h  search-bar.c  search-entry.h  shell-window.c  shell-window.h  slab-gnome-util.c  slab-gnome-util.h  slab-section.c  slab-section.h  slab.h  system-tile.c  system-tile.h  themed-icon.c
libwindow-settings/: .cvsignore  ChangeLog  Makefile.am  gnome-window-manager.c  gnome-window-manager.h  gnome-window-settings-2.0.pc.in  gnome-wm-manager.c  gnome-wm-manager.h  metacity-window-manager.c  metacity-window-manager.h  wm-exec.c  wm-list.c  wm-properties.h
man/: Makefile.am  gnome-control-center.xml  meson.build
panels/: Makefile.am  meson.build
root-manager/: .cvsignore  (+11 more)
(+3891 files in other folders)
